// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`forgotPassword page Default form 1`] = `
<div>
  <div>
    <div
      class="auth__logo"
    >
      <a
        to="[object Object]"
      >
        <div
          class="logo"
        >
          <img
            class=""
            src="@baserow/modules/core/static/img/logo.svg"
          />
        </div>
      </a>
    </div>
     
    <div
      class="auth__head auth__head--more-margin"
    >
      <h1
        class="auth__head-title"
      >
        forgotPassword.title
      </h1>
       
      <div
        class="lang-picker"
      >
        <a
          class="lang-picker__link"
        >
          
    
    
          <i
            class="iconoir-nav-arrow-down lang-picker__icon"
          />
        </a>
         
        <div
          class="dropdown lang-picker__dropdown dropdown--floating"
          tabindex="0"
        >
          <!---->
           
          <div
            class="dropdown__items hidden"
          >
            <!---->
             
            <ul
              class="select__items"
              tabindex=""
            >
              <li
                class="select__item select__item--no-options"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="English"
                    >
                      English
                    </span>
                  </div>
                   
                  <!---->
                </a>
                 
                <i
                  class="select__item-active-icon iconoir-check"
                />
              </li>
            </ul>
             
            <!---->
             
            <!---->
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="alert alert--error"
    >
      <i
        class="alert__icon iconoir-warning-circle"
      />
       
      <div
        class="alert__content"
      >
        <div
          class="alert__title"
        >
          forgotPassword.disabled
        </div>
         
        <div
          class="alert__message"
        >
           
          <p>
            forgotPassword.disabledMessage
          </p>
        </div>
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <a
      class="button button--full-width"
      to="[object Object]"
    >
      <i
        class="iconoir-arrow-left"
      />
      
        action.backToLogin
      
    </a>
  </div>
   
  <!---->
</div>
`;

exports[`forgotPassword page Default form match snapshot 1`] = `
<div>
  <div>
    <div
      class="auth__logo"
    >
      <a
        to="[object Object]"
      >
        <div
          class="logo"
        >
          <img
            class=""
            src="@baserow/modules/core/static/img/logo.svg"
          />
        </div>
      </a>
    </div>
     
    <div
      class="auth__head auth__head--more-margin"
    >
      <h1
        class="auth__head-title"
      >
        forgotPassword.title
      </h1>
       
      <div
        class="lang-picker"
      >
        <a
          class="lang-picker__link"
        >
          
    
    
          <i
            class="iconoir-nav-arrow-down lang-picker__icon"
          />
        </a>
         
        <div
          class="dropdown lang-picker__dropdown dropdown--floating"
          tabindex="0"
        >
          <!---->
           
          <div
            class="dropdown__items hidden"
          >
            <!---->
             
            <ul
              class="select__items"
              tabindex=""
            >
              <li
                class="select__item select__item--no-options"
              >
                <a
                  class="select__item-link"
                >
                  <div
                    class="select__item-name"
                  >
                    <!---->
                     
                    <!---->
                     
                    <!---->
                     
                    <span
                      class="select__item-name-text"
                      title="English"
                    >
                      English
                    </span>
                  </div>
                   
                  <!---->
                </a>
                 
                <i
                  class="select__item-active-icon iconoir-check"
                />
              </li>
            </ul>
             
            <!---->
             
            <!---->
          </div>
        </div>
      </div>
    </div>
     
    <div>
      <p>
        
        forgotPassword.message
      
      </p>
       
      <!---->
       
      <form>
        <div
          class="auth__control"
        >
          <label
            class="auth__control-label"
          >
            field.emailAddress
          </label>
           
          <div
            class="control__elements"
          >
            <input
              class="input"
              type="text"
            />
             
            <div
              class="auth__control-error"
            >
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="auth__action"
        >
          <button
            class="button button--large button--full-width"
          >
            <!---->
             
            <span
              class="button__label"
            >
              
            forgotPassword.submit
          
            </span>
             
            <!---->
          </button>
        </div>
         
        <div>
          <ul
            class="auth__action-links"
          >
            <li>
              
              forgotPassword.loginText
              
              <a
                to="[object Object]"
              >
                
                action.login
              
              </a>
            </li>
          </ul>
        </div>
      </form>
    </div>
  </div>
   
  <!---->
</div>
`;
